tests/ui/proc-macro/bad-projection.stderr
error[E0277]: the trait bound `(): Project` is not satisfied
  --> $DIR/bad-projection.rs:14:17
   |
LL | pub fn uwu() -> <() as Project>::Assoc {}
   |                 ^^^^^^^^^^^^^^^^^^^^^^ the trait `Project` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/bad-projection.rs:9:1
   |
LL | trait Project {
   | ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
